<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditDeleteActivity"
    android:background="@drawable/blue_branches"
    >

    <EditText
        android:id="@+id/etxt_name"
        android:layout_width="322dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/type_the_new_name_if_you_wish_to_edit"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_selected_child_info"
        android:autofillHints="" />

    <TextView
        android:id="@+id/txt_selected_child_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/selcted_child_info"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/etxt_name"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="42dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="@+id/btn_edit"
        app:layout_constraintEnd_toStartOf="@+id/btn_edit"
        app:layout_constraintStart_toStartOf="@+id/etxt_name"
        app:layout_constraintTop_toBottomOf="@+id/etxt_name"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:text="@string/edit"
        app:layout_constraintEnd_toEndOf="@+id/etxt_name"
        app:layout_constraintTop_toBottomOf="@+id/etxt_name" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="@+id/btn_edit"
        app:layout_constraintStart_toStartOf="@+id/btn_delete"
        app:layout_constraintTop_toBottomOf="@+id/btnChangePhotoCamera" />

    <Button
        android:id="@+id/btnChangePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/upload_photo_from_album"
        app:layout_constraintEnd_toEndOf="@+id/btn_edit"
        app:layout_constraintStart_toStartOf="@+id/btn_delete"
        app:layout_constraintTop_toBottomOf="@+id/btn_delete" />

    <ImageView
        android:id="@+id/childPhoto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.231"
        app:srcCompat="@drawable/cross" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <Button
        android:id="@+id/btnChangePhotoCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/take_a_photo"
        app:layout_constraintEnd_toEndOf="@+id/btn_edit"
        app:layout_constraintStart_toStartOf="@+id/btn_delete"
        app:layout_constraintTop_toBottomOf="@+id/btnChangePhoto" />

</androidx.constraintlayout.widget.ConstraintLayout>